--- a/style/style.css
+++ b/style/style.css
@@ -93,6 +93,7 @@ color: #046193;
 h5, h6 {
 font-size: 1em;
 font-style: italic;
+margin-bottom: 0em;
 }
 h6 {
 font-weight: normal;
@@ -130,10 +131,10 @@ background-color: transparent;
 overflow: visible;
 }
 hr {
-background-color: #1a1a1a;
+background-color: #c0baae;
 border: none;
-height: 1px;
-margin: 1em 0;
+height: 2px;
+margin: 2em 0;
 }
 table {
 margin: 1em 0;
@@ -199,12 +200,15 @@ color: #2E3A46;
 .container {
     grid-area: main;
     padding: 20px;
+    linebreaks: break-word;
 }
 .menu {
     grid-area: nav;
     margin-top: 50px;
     padding-left: 30px;
-    min-width: 200px;
+    padding-right: 10px;
+    min-width: 320px;
+    max-width: 320px;
     font-size: 0.9em;
 }
 .footer {
